Actions
Bug #14348
closedlibdbm: mismatched bound
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with gcc 11:
../dbm.c:407:15: error: argument 1 of type 'char[1024]' with mismatched bound [-Werror=array-parameter=] 407 | makdatum(char buf[PBLKSIZ], int n) | ~~~~~^~~~~~~~~~~~ In file included from ../dbm.c:48: /code/illumos-gate/usr/src/ucbhead/dbm.h:77:18: note: previously declared as 'char *' 77 | datum makdatum(char *, int); | ^~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk 7 months ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit cf45009884e299356c21eb3d343d4b99bfd1fd5f
commit cf45009884e299356c21eb3d343d4b99bfd1fd5f Author: Toomas Soome <tsoome@me.com> Date: 2022-01-06T17:04:07.000Z 14348 libdbm: mismatched bound Reviewed by: C Fraire <cfraire@me.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions